--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pyinstaller>=6.14.1",
     "pytaglib>=3.0.1",
     "wxpython>=4.2.3; sys_platform != 'linux'",
 ]
